Support for JSON posts, images, etc.
This update is in an effort to proxy the new Kibana 4, which has it's
own node web server now.

--- a/Views/Parts.Proxy_SummaryAdmin.cshtml
+++ b/Views/Parts.Proxy_SummaryAdmin.cshtml
@@ -1,7 +1,8 @@
 @using Proxy.Models
 @{
     var part = (ProxyPart) Model.Part;
+    var trailingSlash = part.ServiceUrl.EndsWith("/") ? "/" : "";
 }
 Use 
-<a href="@Url.Content(string.Format("~/Proxy/{0}",part.Id))" target="_blank">@Url.Content(string.Format("~/Proxy/{0}", part.Id))</a> 
+<a href="@Url.Content(string.Format("~/Proxy/{0}{1}",part.Id, trailingSlash))" target="_blank">@Url.Content(string.Format("~/Proxy/{0}{1}", part.Id, trailingSlash))</a> 
 to access <a href="@part.ServiceUrl" target="_blank">@part.ServiceUrl</a>.
